--- a/belaytionshipBackend/package.json
+++ b/belaytionshipBackend/package.json
@@ -10,11 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth": "0.0.9",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "knex": "^0.14.4",
+    "mocha": "^5.0.2",
     "morgan": "^1.9.0",
-    "pg": "^7.4.1"
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "pg": "^7.4.1",
+    "service": "^0.1.4"
   }
 }
